--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Homepage</title>
+  <title>jpgT Homepage</title>
   <style>
     body {
       font-family: sans-serif;
@@ -32,7 +32,7 @@
   <div>
     <a href="https://www.google.com">Google</a>
     <a href="https://www.github.com">GitHub</a>
-    <a href="https://mail.proton.me">ProtonMail</a>
+    <a href="https://gmail.com">GMail</a>
   </div>
 </body>
 </html>
