--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>jpgT Homepage</title>
+  <link rel="icon" href="/assets/jt_favicon.png" type="image/x-icon">
 </head>
 <body>
   <h1>Welcome to My Custom Homepage</h1>
@@ -11,6 +12,7 @@
     <a href="https://www.google.com">Google</a>
     <a href="https://www.github.com">GitHub</a>
     <a href="https://gmail.com">GMail</a>
+    <a href="https://reddit.com">Reddit</a>
   </div>
 </body>
 </html>
