--- a/index.html
+++ b/index.html
@@ -9,11 +9,44 @@
 </head>
 <body>
   <h1>Welcome to My Custom Homepage</h1>
+
+  <!-- 🔍 Search Input -->
+  <input
+    id="custom-search"
+    type="text"
+    placeholder="Search or enter address..."
+    autofocus
+    onkeydown="handleSearch(event)"
+  >
+
   <div>
     <a href="https://www.google.com">Google</a>
     <a href="https://www.github.com">GitHub</a>
     <a href="https://gmail.com">GMail</a>
     <a href="https://reddit.com">Reddit</a>
   </div>
+
+  <!-- 🔧 JavaScript -->
+  <script>
+    // Ensure focus is applied after page load
+    window.onload = () => {
+      document.getElementById('custom-search')?.focus();
+    };
+
+    function handleSearch(event) {
+      if (event.key === 'Enter') {
+        const query = event.target.value.trim();
+        if (query) {
+          const urlPattern = /^https?:\/\//i;
+          if (urlPattern.test(query)) {
+            window.location.href = query;
+          } else {
+            window.location.href = 'https://www.google.com/search?q=' + encodeURIComponent(query);
+          }
+        }
+      }
+    }
+  </script>
 </body>
 </html>
+
