--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <input
     id="custom-search"
     type="text"
-    placeholder="Search or enter address..."
+    placeholder="Whatcha looking for?"
     autofocus
     onkeydown="handleSearch(event)"
   >
