Inline style to debug css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     id="custom-search"
     type="text"
     placeholder="Whatcha looking for?"
+    style="background: red;"
     autofocus
     onkeydown="handleSearch(event)"
   >
