--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
   <title>jpgT Homepage</title>
   <link rel="icon" href="/assets/jt_favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <h1>Welcome to My Custom Homepage</h1>
+  <h1>New page, who dis?</h1>
 
   <!-- 🔍 Search Input -->
   <input
     id="custom-search"
     type="text"
     placeholder="Whatcha looking for?"
-    style="background: red;"
     autofocus
     onkeydown="handleSearch(event)"
   >
 
-  <div>
-    <a href="https://www.google.com">Google</a>
-    <a href="https://www.github.com">GitHub</a>
-    <a href="https://gmail.com">GMail</a>
-    <a href="https://reddit.com">Reddit</a>
+  <div class="icon-links">
+    <a href="https://www.google.com" title="Google"><i class="fab fa-google"></i></a>
+    <a href="https://www.github.com" title="GitHub"><i class="fab fa-github"></i></a>
+    <a href="https://gmail.com" title="GMail"><i class="fas fa-envelope"></i></a>
+    <a href="https://reddit.com" title="Reddit"><i class="fab fa-reddit"></i></a>
   </div>
 
   <!-- 🔧 JavaScript -->
