--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+  <img src="assets/anime_header.png" alt="Anime Header" class="header-img">
   <h1>New page, who dis?</h1>
 
   <!-- 🔍 Search Input -->
